kafka-app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: bank
spec:
  serviceName: kafka
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      hostname: kafka

      containers:
        - name: kafka
          image: confluentinc/cp-kafka:8.1.1

          ports:
            - name: external
              containerPort: 9092

            - name: internal
              containerPort: 29092

            - name: controller
              containerPort: 29093

            - name: jmx
              containerPort: 9101

          volumeMounts:
            - name: kafka-data
              mountPath: /tmp/kraft-combined-logs

  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 20Gi
