activity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activity-service
  namespace: bank
spec:
  type: ClusterIP
  selector:
    app: activity-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
  namespace: bank
spec:
  replicas: 1

  selector:
    matchLabels:
      app: activity-service

  template:
    metadata:
      labels:
        app: activity-service

    spec:
      serviceAccountName: activity-service-sa

      containers:
        - name: activity-service
          image: 476114152571.dkr.ecr.eu-west-2.amazonaws.com/activity-service:v1
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8001

          command:
            - /bin/sh
            - -c
            - |
              export POSTGRES_USER="$(cat /mnt/secrets/POSTGRES_USER)"
              export POSTGRES_PASSWORD="$(cat /mnt/secrets/POSTGRES_PASSWORD)"
              export POSTGRES_DB="$(cat /mnt/secrets/POSTGRES_DB)"

              export DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}"

              exec uvicorn app.main:app --host 0.0.0.0 --port 8001

          volumeMounts:
            - name: activity-service-secrets
              mountPath: /mnt/secrets
              readOnly: true

          startupProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 5
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

      volumes:
        - name: activity-service-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: activity-service-secrets
