kafka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: bank
spec:
  selector:
    app: kafka
  ports:
    - name: external
      port: 9092
      targetPort: 9092

    - name: internal
      port: 29092
      targetPort: 29092

    - name: controller
      port: 29093
      targetPort: 29093

    - name: jmx
      port: 9101
      targetPort: 9101
