postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: bank
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
