redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bank
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: bank
spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7

          ports:
            - containerPort: 6379

          command:
            - redis-server

          args:
            - --appendonly
            - "yes"

          volumeMounts:
            - name: redis-data
              mountPath: /data

      volumes:
        - name: redis-data
          emptyDir: {}
