transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: bank
spec:
  type: ClusterIP
  selector:
    app: transaction-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: bank
spec:
  replicas: 1

  selector:
    matchLabels:
      app: transaction-service

  template:
    metadata:
      labels:
        app: transaction-service

    spec:
      serviceAccountName: transaction-service-sa

      containers:
        - name: transaction-service
          image: 476114152571.dkr.ecr.eu-west-2.amazonaws.com/transaction-service:v1
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          command:
            - /bin/sh
            - -c
            - |
              export SPRING_DATASOURCE_USERNAME="$(cat /mnt/secrets/POSTGRES_USER)"
              export SPRING_DATASOURCE_PASSWORD="$(cat /mnt/secrets/POSTGRES_PASSWORD)"
              export POSTGRES_DB="$(cat /mnt/secrets/POSTGRES_DB)"

              export SPRING_DATASOURCE_URL="jdbc:postgresql://postgres:5432/${POSTGRES_DB}"

              exec java -jar app.jar

          volumeMounts:
            - name: transaction-service-secrets
              mountPath: /mnt/secrets
              readOnly: true

          startupProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 5
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

      volumes:
        - name: transaction-service-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: transaction-service-secrets
